[package]
name = "swivel"
version = "0.1.0"
edition = "2021"
description = "One trait, many databases: a tiny Rust adapter layer for Notion, Supabase, and Postgres."
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhailphotos/swivel"
keywords = ["database", "traits", "notion", "supabase", "postgres"]
categories = ["database", "api-bindings"]

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
anyhow = "1"
serde_json = "1.0.145"
